--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A project that enrolls patients to a hospital and assigns them appointments to doctors and many other features",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/Tushar-Riyat/MedEnroll-Hub#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.9.1"
   }
 }
