--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/Tushar-Riyat/MedEnroll-Hub#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.9.1"
+    "emailvalid": "^1.0.4",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.3",
+    "mysql2": "^3.9.1",
+    "nodemon": "^3.1.0"
   }
 }
