--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/Tushar-Riyat/MedEnroll-Hub#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "ejs": "^3.1.10",
     "emailvalid": "^1.0.4",
     "express": "^4.19.2",
     "mongoose": "^8.3.3",
     "mysql2": "^3.9.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   }
 }
