--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
   "homepage": "https://github.com/Tushar-Riyat/MedEnroll-Hub#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "emailvalid": "^1.0.4",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
