--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.0",
     "nodemon": "^3.1.0",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
+    "sqlite3": "^5.1.7",
     "uuid": "^9.0.1"
   }
 }
